# toolAbrasionManage

./: CMakeLists.txt  main.cpp
configFiles/: log4cplus.properties  toolLife.json  update.sh
includes/mqtt-win/: async_client.h  thread_queue.h
libs/hiredis/: libhiredis.so.0.14
libs/hiredis-win/: hiredis.lib
libs/log4c/: liblog4cplus-1.1.so.9
libs/log4c-win/: log4cplus.lib
libs/miniz-win/: miniz.lib
libs/mqtt/: libpaho-mqtt3a.so.1  libpaho-mqtt3as.so.1  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0  libpaho-mqttpp3.so.1
libs/mqtt-win/: common.properties  paho-mqtt3a.lib  paho-mqttpp3.lib  toolLife.json
src/Log4C/: DebugInfo.h  Log.cpp  Log.h
src/Win32_Interop/: win32fixes.h
src/config/: config.cpp  config.h
src/fileCtl/: FileCtl.cpp  FileCtl.h
src/json/: json.h  jsoncpp.cpp
src/redisClient/: redisClient.cpp  redisClient.h
src/unzip/: Unzip.cpp  Unzip.h  inflate.h
src/win_stdafx/: stdafx.cpp
